# kek-backend

./: .gitignore  README.md  pyproject.toml
etc/: requirements.txt
src/: __main__.py  main.py
src/api/: __init__.py  routes.py
src/api/v1/: router.py
src/api/v1/endpoints/: film.py  user.py
src/data/: database.py
src/models/: operations.py
src/servises/: operations.py
webapp/: __main__.py  app.py  webapp.py
webapp/api/: __init__.py
webapp/apps/: create_database.py  database.py  tables.py
webapp/conf/: settings.py
